[fix] use overflow-hidden

--- a/app/globals.css
+++ b/app/globals.css
@@ -9,6 +9,7 @@
     font-family: "Space Grotesk", sans-serif;
     color: theme("colors.secondary");
     background: theme("colors.dark.600");
+    overflow-x: hidden;
   }
   h1 {
     @apply text-5xl md:text-7xl xl:text-8xl text-primary font-bold;
